# GlobalOCR

./: CMakeLists.txt  README.md
include/: DataLoader.h  GlobalOCR.h  Model.h  Resource.h  framework.h
resource/: GlobalOCR.rc
src/: GlobalOCR.cpp
